schema/testdata/validation_relationships_one_to_one_relation_field_is_repeated_field/schema.keel
model User {
    fields {
        student Student {
            @unique
            @relation(user)
        }
    }
}

model Student {
    fields {
        user User[]
    }
}
